Fixed contact icon alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -72,37 +72,32 @@ nav a:hover {
   border-bottom: 2px solid black;
 }
 
-.image-20 {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 20%;
-}
-
-.image-40 {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 40%;
-}
-
-.image-60 {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 60%;
-}
-
-.image-80 {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 80%;
-}
-
+.image-20,
+.image-40,
+.image-60,
+.image-80,
 .image-100 {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+.image-20 {
+  width: 20%;
+}
+
+.image-40 {
+  width: 40%;
+}
+
+.image-60 {
+  width: 60%;
+}
+
+.image-80 {
+  width: 80%;
+}
+
+.image-100 {
   width: 100%;
 }
