--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -19,4 +19,5 @@
   width: 33%;
   padding-top: 10px;
   padding-bottom: 10px;
+  vertical-align: top;
 }
